go-backend/go-k8s-resource-defins/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-backend
  namespace: ai-tools
  labels:
    app: go-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-backend
  template:
    metadata:
      labels:
        app: go-backend
    spec:
      containers:
        - name: go-backend
          image: evanhuang7/ai-tools-go-backend:developing
          # K8s will always pull the image from Docker Hub, every time
          # a pod starts even if that the image with this tag already exists on the node.
          # If the tag is ":latest" and "imagePullPolicy" is not set,
          # K8s defaults to use "Always".
          # If the tag is custom like ":developing" or ":v1.0",
          # the default is "IfNotPresent".
          # NOTE: You have to manually pruned old images in your host
          # if running Kind Cluster locally and use "Always" option.
          # In GKE, the node’s kubelet includes automatic image garbage collection
          # so the kubelet will auto clean up unused images for you.
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
            - name: grpc
              containerPort: 50051
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /ping
              port: 8000
            initialDelaySeconds: 10 # Start checking after container starts running 10s
            periodSeconds: 20 # Check every 20s
            timeoutSeconds: 2 # Fail if API call timeout after 2s
            failureThreshold: 3 # If 3 checks in a row fail, restart the container
          readinessProbe:
            httpGet:
              path: /ping
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
          resources:
            limits:
              memory: "120Mi"
              cpu: "60m"
            requests:
              memory: "100Mi"
              cpu: "50m"
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
      securityContext:
        seccompProfile:
          type: RuntimeDefault
